--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      height: 100vh; /* Full height */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      background: linear-gradient(to bottom, #4d0000, #cc0000);
+      font-family: Arial, sans-serif;
       color: white;
+      background: linear-gradient(to bottom, #4d0000, #cc0000);
+      background-attachment: fixed; /* Smooth gradient without breaks */
     }
     h1 {
-      margin-top: 60px;
       font-size: 2.5rem;
+      margin-bottom: 20px;
     }
     .links {
-      margin-top: 30px;
       font-size: 1.2rem;
     }
     .links a {
