--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
   <!-- Social icons -->
   <div class="socials">
     <a href="https://tiktok.com/@antipedosaction" target="_blank"><i class="fab fa-tiktok"></i></a>
-    <a href="https://jaidensupport.github.io/AUTTP" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://github.com/antipedoaction" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://youtube.com/@antipedoaction" target="_blank"><i class="fab fa-youtube"></i></a>
   </div>
 
   <!-- Bottom-left logo -->
