--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Anti Pedo Action</title>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png">
+  <link rel="icon" type="image/png" href="logo.png" sizes="32x32">
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
