--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Anti Pedo Action</title>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="logo.png">
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
@@ -115,7 +115,6 @@
   <div class="socials">
     <a href="https://tiktok.com/@antipedosaction" target="_blank"><i class="fab fa-tiktok"></i></a>
     <a href="https://github.com/antipedoaction" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://youtube.com/@antipedoaction" target="_blank"><i class="fab fa-youtube"></i></a>
   </div>
 
   <!-- Bottom-left logo -->
